--- a/data/medtasks.json
+++ b/data/medtasks.json
@@ -21,7 +21,7 @@
         "answer4":"120-130/min",
         "answer5":"130-430",
         "correct": 2,
-        "info":"info do pytania drugiego"
+        "info":""
     },
     {
         "id":"ratunkowa",
@@ -33,7 +33,7 @@
         "answer4":"50-70%",
         "answer5":"75-100%",
         "correct": 3,
-        "info":"info do pytania 3"
+        "info":""
     },
     {
         "id":"ratunkowa",
@@ -117,7 +117,7 @@
         "answer4":"podaniu dożylnym 1 mg adrenaliny",
         "answer5":"podaniu dożylnym 300 mg amiodaronu",
         "correct": 2,
-        "info":"info do pytania 5"
+        "info":"Po każdej defibrylacji sprawdź czy wystąpiła zmiana rytmu i ROSC - przywrócenie spontanicznego krążenia krwi."
     },
     {
         "id":"ratunkowa",
@@ -206,133 +206,229 @@
     {
         "id":"ratunkowa",
         "no":18,
-        "task":"18. Uporządkuj  ",
-        "answer1":"migotania komór",
-        "answer2":"asystolii",
-        "answer3":"częstoskurczu komorowym bez tętna",
-        "answer4":"bradykardii",
-        "answer5":"aktywności elektrycznej bez tętna",
-        "correct": 0,
-        "info":"info do pytania 5"
+        "task":"18. Maksymalna przerwa w celu wykonania wdechu podczas RKO powinna wynosić:",
+        "answer1":"1 sekundę",
+        "answer2":"5 sekund",
+        "answer3":"10 sekund",
+        "answer4":"15 sekund",
+        "answer5":"20 sekund",
+        "correct": 2,
+        "info":"Osoby wykonujące RKO powinny dążyć do wykonywania wdechu przez 1 sekundę objętością wystarczającą by uzyskać uniesienie klatki piersiowej."
     },
     {
         "id":"ratunkowa",
         "no":19,
-        "task":"19. Azotany działają poprzez wytwrazanie NO, który stymuluje:",
-        "answer1":"wzrost cGMP poprzez cyklazę guanylową",
-        "answer2":"spadek cGMP poprzez cyklazę guanylową ",
-        "answer3":"wzrost cAMP poprzez cyklazę adenylową ",
-        "answer4":"spadek cAMP poprzez cyklazę adenylową",
-        "answer5":"brak prawidłowej odpowiedzi",
-        "correct": 0,
-        "info":"info do pytania 5"
+        "task":"19. Jeżeli poszkodowany podczas zadławienia wykazuje objawy całkowitej niedrożności dróg oddechowych i jest przytomny należy:",
+        "answer1":"uderzyć 2 razy w okolicę międzyłopatkową",
+        "answer2":"zachęcac do kaszlu i uderzyć 5 razy w okolicę międzyłopatkową",
+        "answer3":"rozpocząć RKO ",
+        "answer4":"ucisnąć chorego między pępkiem a mostkiem od tyłu mając zaciśniętą pięść w drugą rękę",
+        "answer5":"wykonać 5 oddechów ratowniczych",
+        "correct": 1,
+        "info":"Gdy pomimmo 5 uderzeń w okolicę międzyłopatkową nie doszło do usunięcia niedrożności należy wykonać 5 uciśnięć nadbrzusza. Jeżeli nadal nie można usunąć niedrożnosci wykonuj naprzemiennie 5 uciśnięć nadbrzusza z 5 uderzeniami w "
     },
     {
         "id":"ratunkowa",
         "no":20,
-        "task":"20. Charakterystyczną cechą bólu wieńcowego jest jego promieniowanie do wszystkich z wyjątkiem",
-        "answer1":"żuchwy",
-        "answer2":"lewego przedramienia",
-        "answer3":"grzbietu",
-        "answer4":"nadbrzusza",
+        "task":"20. Gdy osoba dławiąca się straci przytomność należy:",
+        "answer1":"wykonać 5 uderzeń w okolicę międzyłopatkową",
+        "answer2":"wezwać pogotowie ratunkowe i pzystąpić do RKO",
+        "answer3":"wykonać 5 uciśnięć nadbrzusza",
+        "answer4":"naprzemiennie wykonywać uciśnięcia nadbrzusza z uderzeniami w okolicę międzyłopatkową",
         "answer5":"prawej łopatki",
-        "correct": 4,
+        "correct": 1,
         "info":"info do pytania 5"
     },
     {
         "id":"ratunkowa",
         "no":21,
-        "task":"21. Najcięższym mechanizmem zatrzymania serca jest:",
-        "answer1":"migotanie komór",
-        "answer2":"asystolia",
-        "answer3":"częstoskurcz komorowy bez tętna",
-        "answer4":"aktywność elektryczna bez tętna",
-        "answer5":"brak prawidłowej odpowiedzi",
-        "correct": 1,
-        "info":"Asystolia najczęsciej powstaje jako pogorszenie stanu migotania komór."
+        "task":"21. U dzieci oraz u osób tonących resuscytacja powinna być rozpoczęta od:",
+        "answer1":"30 uciśnięć klatki piersiowej",
+        "answer2":"15 uciśnięć klatki piersiowej",
+        "answer3":"10 oddechów ratowniczych",
+        "answer4":"5 oddechów ratowniczych",
+        "answer5":"uderzenia przedsercowego",
+        "correct": 3,
+        "info":"Jeżeli poza tobą nie ma innych świadków zdarzenia prowadź RKO przez 1 minutę zanim udasz się po pomoc. Mostek należy uciskać na 1/3 wymiaru przednio tylnego, u niemowląt poniżej 1 roku życia uciskaj dwoma palcami, u dzieci powyżej 1 roku używaj jednej lub obu rąk. "
     },
     {
         "id":"ratunkowa",
         "no":22,
-        "task":"22. W migotaniu komór i częstoskurczu z szerokimi zespołami QRS jedynym skutecznym leczeniem jest:",
-        "answer1":"podanie adrenaliny",
-        "answer2":"podanie amiodaronu",
-        "answer3":"defibrylacja elektryczna",
-        "answer4":"kardiowersja",
-        "answer5":"brak prawidłowej odpowiedzi",
-        "correct": 2,
+        "task":"22. Po zaintubowaniu liczba oddechów na minutę powinna wynosić:",
+        "answer1":"2",
+        "answer2":"3",
+        "answer3":"5",
+        "answer4":"10",
+        "answer5":"15",
+        "correct": 3,
         "info":"info do pytania 5"
     },
     {
         "id":"ratunkowa",
         "no":23,
-        "task":"23. Rozpoznanie rozkojarzenia elektrycznego bez tętna możemy postawić gdy:",
-        "answer1":"pomimo obecności krzywej EKG nie stwiedza się tętna obwodowego ani ciśnienia tętniczego",
-        "answer2":"krzywa EKG ma postać prostej linii oraz nie stwierdza się tętna na tętnicy promieniowej",
-        "answer3":"nieowdracalne ustanie czynności pnia mózgu jako całości",
-        "answer4":"nieodwracalne zaburzenia oddychania",
-        "answer5":"nieodwracalne uszkodzenie kory mózgu",
-        "correct": 0,
-        "info":"info do pytania 5"
+        "task":"23. W rytmach do defibrylacji pierwszą dawkę adrenaliny należy podać:",
+        "answer1":"przed rozpoczęciem RKO",
+        "answer2":"po 2 pętlach RKO",
+        "answer3":"po pierwszej nieudanej defibrylacji",
+        "answer4":"po trzeciej nieudanej defibrylacji",
+        "answer5":"adrenalina jest przeciwskazana w rytmach do defibrylacji",
+        "correct": 3,
+        "info":"W rytmach do defibrylacji wskazane jest także podanie 300 mg amiodaronu po trzeciej nieudanej defibrylacji. Można rozważyć podanie kolejnej dawki po pięciu defibrylacjach."
     },
     {
-        "id":"interna",
-        "no":1,
-        "task":"pierwsze pytanie z interny, poprawna b",
-        "answer1":"1",
-        "answer2":"2",
-        "answer3":"3",
-        "answer4":"4",
-        "answer5":"5",
-        "correct": 1,
+        "id":"ratunkowa",
+        "no":24,
+        "task":"Rytmem nie do defibrylacji jest:",
+        "answer1":"migotanie komór i częstoskurcz komorowy bez tętna",
+        "answer2":"migotanie komór i aktywność elektryczna bez tętna",
+        "answer3":"asystolia i częstoskurcz komorowy bez tętna",
+        "answer4":"asystolia i aktywność elektryczna bez tętna",
+        "answer5":"aktywność elektryczna bez tętna i częstoskurcz komorowy bez tętna",
+        "correct": 3,
         "info":"info do 1 pytania z interny"
     },
     {
-        "id":"interna",
-        "no":2,
-        "task":"kolejne z interny, tym razem 4 poprawna",
-        "answer1":"1",
-        "answer2":"2",
-        "answer3":"3",
-        "answer4":"4",
-        "answer5":"5",
-        "correct": 3,
-        "info":"info do drugiego pytania z interny"
-    },
-    {
-        "id":"interna",
-        "no":3,
-        "task":"i ostatnie pytanie z interny, tym razem A poprawna",
-        "answer1":"1",
-        "answer2":"2",
-        "answer3":"3",
-        "answer4":"4",
-        "answer5":"5",
-        "correct": 0,
-        "info":"info do pytania 3 z interny"
-    },
-    {
-        "id":"chirurgia",
-        "no":1,
-        "task":"pytanie z chirurgii, odpowiedź A poprawna",
-        "answer1":"1",
-        "answer2":"2",
-        "answer3":"3",
-        "answer4":"4",
-        "answer5":"5",
-        "correct": 0,
-        "info":"info do pytania z chirurgii"
-    },
-    {
-        "id":"chirurgia",
-        "no":2,
-        "task":"pytanie z chirurgii, odpowiedź B poprawna",
-        "answer1":"1",
-        "answer2":"2",
-        "answer3":"3",
-        "answer4":"4",
-        "answer5":"5",
+        "id":"ratunkowa",
+        "no":25,
+        "task":"Początkowa wartość energii defibrylacji dla defibrylatorów deufazowych wynosi:",
+        "answer1":"100 J",
+        "answer2":"150 J",
+        "answer3":"200 J",
+        "answer4":"250 J",
+        "answer5":"300 J",
         "correct": 1,
+        "info":"Bezpośrednio po defibrylacji wróć do wykonywania RKO przez 2 minuty. Następnie oceń rytm serca. Jeżeli utrzymuje się rytm do defibrylacji powtórz defibrylację 150-360 J energią dwufazową."
+    },
+    {
+        "id":"ratunkowa",
+        "no":26,
+        "task":"Ocenę rytmu serca podczas RKO należy wykonać",
+        "answer1":"po każej defibrylacji",
+        "answer2":"po każdym cyklu 30 uciścięć i 2 oddechów ",
+        "answer3":"po podaniu adrenaliny",
+        "answer4":"po podaniu jakiegokolwiek leku ",
+        "answer5":"po 2 minutach prowadzonego RKO wykonywanego po defibyrlacji",
+        "correct": 4,
+        "info":"Po każdej defibrylacji rozpocznij RKO i prowadź przez 2 minuty. Następnie oceń rytm serca."
+    },
+    {
+        "id":"ratunkowa",
+        "no":27,
+        "task":"Do intybacji częstość wykonywania oddechów u pacjneta wynosi:",
+        "answer1":"2 oddechy na minutę",
+        "answer2":"5 oddechów na minutę",
+        "answer3":"10 oddechów na minutę",
+        "answer4":"15 oddechów na minutę",
+        "answer5":"16-20 oddechów na minutę",
+        "correct": 2,
         "info":"info do pytania z chirurgii"
-    }
+    },
+    {
+        "id":"ratunkowa",
+        "no":28,
+        "task":"Po podaniu leków do kaniulii obwodowej należy:",
+        "answer1":"wyłącznie unieść kończynę na 10-20 sekund",
+        "answer2":"podać dodatkową dawkę adrenliny",
+        "answer3":"wykonać defibyrlację",
+        "answer4":"powrócić do RKO",
+        "answer5":"przepłukać ją płynem o objętości 20 ml i unieść kończynę na 10-20 sekund",
+        "correct": 4,
+        "info":"Takie postępowanie ułatwia dostraczenie leków do krążenia centralnego. W wypadku trudności z uzyskaniem dostępu donaczyniowego rozważ dostęp doszpikowy."
+    },
+    {
+        "id":"ratunkowa",
+        "no":29,
+        "task":"29. Gdy na monitorze pojawi się asystolia lub aktywność elektryczna bez tętna (PEA) inna niż częstoskurcz komorowy należy:",
+        "answer1":"niezwłocznie rozpocząć RKO",
+        "answer2":"wykonać defibrylację i rozpocząć RKO",
+        "answer3":"wykonać 3 defibrylacje następujące bezpośrednio po sobie",
+        "answer4":"rozpocząć RKO i potwierdzić prawidłowe podłączenie wszystkich elektrod",
+        "answer5":"wykonać uderzenie przedsercowe",
+        "correct": 3,
+        "info":"Po 2 minutach ponownie sprawdź rytm. Jeżeli obecna jest asystolia, natychmiast podejmij RKO. Jeżeli obecny jest zorganizowany rytm, spóbuj wyczuć tętno. Jeśli tętno jest nieobecne (lub masz wątpliwości co do jego obecności) kontynuuj RKO. Podaj 1 mg adrenaliny tak szybko, jak tylko zapewniony zostanie dostęp dożylny lub doszpikowy. Powtarzaj jej podawanie co 2 cykl RKO (tj. 3-5 minut)."
+    },
+    {
+        "id":"ratunkowa",
+        "no":30,
+        "task":"30. Niestabilna hemodynamicznie tachykardia jest wskazaniem do:",
+        "answer1":"kardiowersji",
+        "answer2":"defibrylacji",
+        "answer3":"podania 1 mg adrenaliny iv",
+        "answer4":"B-blokera",
+        "answer5":"stymulacji nerwu błędnego",
+        "correct": 0,
+        "info":""
+    },
+    {
+        "id":"ginekologia",
+        "no":1,
+        "task":"1. Komórka jajowa otoczona jest przez:",
+        "answer1":"wieniec komórek promienistych",
+        "answer2":"osłonkę przejrzystą  ",
+        "answer3":"osłonkę przejrzystą wewnątrznie i wieniec komórek promienistych wewnętrznie",
+        "answer4":"osłonkę przejrzystą zewnętrznie i wieniec komórek promienistych wewnętrznie",
+        "answer5":"brak prawidłowej odpowiedzi",
+        "correct": 2,
+        "info":"Wieniec komórek promienistych bogaty jest w kwas hialuronowy."
+    },
+    {
+        "id":"ginekologia",
+        "no":2,
+        "task":"2. Osłonka przejrzysta:",
+        "answer1":"zawiera receptory dla plemników",
+        "answer2":"reguluje aktywność plemników",
+        "answer3":"zapobiega polispermii",
+        "answer4":"a+b",
+        "answer5":"a+b+c",
+        "correct": 4,
+        "info":"kolejne info, tym razem 4"
+    },
+    {
+        "id":"ginekologia",
+        "no":3,
+        "task":"3. Szczyt wydzielania hormonu luteinizującego występuje:",
+        "answer1":"36 h przed owulacją",
+        "answer2":"24 h po owulacji",
+        "answer3":"w momencie owulacji",
+        "answer4":"2 h po owulacji",
+        "answer5":"24 h po owulacji",
+        "correct": 0,
+        "info":"Do momentu owulacji komórka jajowa zostaje w spoczynku - chromosomy znajdują się w późnej profazie 1 podziału mejotycznego."
+    },
+    {
+        "id":"ginekologia",
+        "no":4,
+        "task":"4. W wyniku pierwszego podziału mejotycznego powstaje:",
+        "answer1":"oocyt z diploidalną liczbą chromosomów (n=46)",
+        "answer2":"oocyt z diploidalną liczbą chromosomów (n=46) i pierwsze ciałko kierunkowe",
+        "answer3":"oocyt z haploidalną liczbą chromosomów (n=23)",
+        "answer4":"oocyt z haploidalną liczbą chromosomów (n=23) i pierwsze ciałko kierunkowe",
+        "answer5":"brak prawidłowej odpowiedzi",
+        "correct": 3,
+        "info":"Ciałko kierunkowe zawiera powstały po podziale materiał genetyczny i ulega degeneracji."
+    },
+    {
+        "id":"ginekologia",
+        "no":5,
+        "task":"5. Do zapłodnienia dochodzi w:",
+        "answer1":"strzępkach jajowodu",
+        "answer2":"bańce jajowodu",
+        "answer3":"w cieśni jajowodu",
+        "answer4":"w częsci macicznej jajowodu",
+        "answer5":"lejku",
+        "correct": 4,
+        "info":""
+    },
+    {
+        "id":"ginekologia",
+        "no":6,
+        "task":"6. Wskaż zdanie prawdziwe dotyczące komórki jajowej i plemnika",
+        "answer1":"Niezapłodniona komórka jajkowa umiera zaraz po tym gdy nie zostanie zapłodniona, podczas gdy plemniki zachowują żywotność przez 12-14 h",
+        "answer2":"Niezapłodniona komórka jajkowa jak i plemniki umierają po 12-24h",
+        "answer3":"Niezapłodniona komórka jajkowa umiera po 12-24 h, podczas gdy plemniki zachowują żywotność przez ponad 24 h (nawet przez ponad 70 godzin)",
+        "answer4":"Niezapłodniona komórka jajkowa jak i plemniki umierają po ponad 24 h (nawet po 70 godzinach)",
+        "answer5":"Brak prawidłowej odpowiedzi",
+        "correct": 2,
+        "info":""
+    } 
 ]
