style, and tasks upradges

--- a/data/medtasks.json
+++ b/data/medtasks.json
@@ -590,7 +590,7 @@
     {
         "id":"ginekologia",
         "no":20,
-        "task":"Produkcja surfaktantu rozpoczyna się w:",
+        "task":"20. Produkcja surfaktantu rozpoczyna się w:",
         "answer1":"10 tygodniu ciąży przez pneumocyty I rzędu",
         "answer2":"17 tygodniu ciąży przez pneumocyty II rzędu ",
         "answer3":"25 tygodniu ciąży przez pneumocyty II rzędu",
@@ -602,49 +602,108 @@
     {
         "id":"ginekologia",
         "no":21,
-        "task":"Pierwszy mocz zostaje oddany :",
+        "task":"21. Pierwszy mocz zostaje oddany :",
         "answer1":"10 tygodniu ciąży",
         "answer2":"14 tygodniu ciąży",
         "answer3":"18 tygodniu ciąży",
         "answer4":"20 tygodniu ciąży",
         "answer5":"22 tygodniu ciąży",
         "correct": 2,
+        "info":"Jest on wydalany do jamy owodni, ulega połknięciu przez płód, zostaje wchłonięty, przepływa przez nerki i ponownie jest wydalany. W tym czasie nerka nie wydala jeszcze produktów przemiany materii. Tę funkcję spełnia łożysko."
+    },
+    {
+        "id":"ginekologia",
+        "no":22,
+        "task":"22. Prawidłowo jądra zstępują do moszny:",
+        "answer1":"do 15 tygodnia ciąży",
+        "answer2":"do 20 tygodnia ciąży",
+        "answer3":"d0 32 tygodnia ciąży",
+        "answer4":"do 38 tygodnia ciąży",
+        "answer5":"w pierwszych dniach po porodzie",
+        "correct": 2,
+        "info":"Brak zstąpienia jąder nazywane jest wnętrostwem."
+    },
+    {
+        "id":"ginekologia",
+        "no":23,
+        "task":"23. Fetopatie to wady rozwojowe powstałe w czasie okresu:",
+        "answer1":"przedzarodkowego wpierwszym tygodniu ciąży",
+        "answer2":"zarodkowego od 4 tygodnia do 8 tygodnia ciąży ",
+        "answer3":"zarodkowego od 2 tygodnia do 8 tygodnia ciąży ",
+        "answer4":"płodowego od 9 tygodnia do końca ciąży",
+        "answer5":"płodowego od 5 tygodnia do końca ciąży",
+        "correct": 3,
         "info":""
     },
     {
         "id":"ginekologia",
-        "no":10,
-        "task":"Reakcja polegająca na zmianie potencjału błonowego komórki jajowej oraz uwolnieniu proteaz zapobiegających polispermii to reakcja:",
-        "answer1":"rdzeniowa",
-        "answer2":"korowa",
-        "answer3":"akrosomalna",
-        "answer4":"kapacytacji",
-        "answer5":"plemnikowa",
+        "no":24,
+        "task":"24. Wskaż zdanie prawdziwe:",
+        "answer1":"Pierwsze ruchy płodu odczuwane są przez pierwiastki w 18 tygodniu ciąży, a przez wieloródki w 16.",
+        "answer2":"Pierwsze ruchy płodu odczuwane są przez pierwiastki w 20 tygodniu ciąży, a przez wieloródki w 18.",
+        "answer3":"Pierwsze ruchy płodu odczuwane są przez pierwiastki w 22 tygodniu ciąży, a przez wieloródki w 18.",
+        "answer4":"Pierwsze ruchy płodu odczuwane są przez pierwiastki w 20 tygodniu ciąży, a przez wieloródki w 22.",
+        "answer5":"Pierwsze ruchy płodu odczuwane są przez pierwiastki w 25 tygodniu ciąży, a przez wieloródki w 27.",
         "correct": 1,
-        "info":"Reakcja korowa to mechanizmy obronne zapobiegające komórkę jajową przed połączeniem się z więcej niż jednym plemnikiem."
-    },
-    {
-        "id":"ginekologia",
-        "no":11,
-        "task":"Wskaż prawidłowe czasy trwania kolejno okresów: przedzarodkowego, zarodkowego i płodowego",
-        "answer1":"od zapłodnienia do 1 tygodnia, 2-8 tygodnia, od 9 tygodnia do końca ciąży",
-        "answer2":"od zapłodnienia do 2 tygodnia, 3-8 tygodnia, od 9 tygodnia do końca ciąży",
-        "answer3":"od zapłodnienia do 3 tygodnia, 4-9 tygodnia, od 10 tygodnia do końca ciąży",
-        "answer4":"od zapłodnienia do 4 tygodnia, 5-9 tygodnia, od 10 tygodnia do końca ciąży",
-        "answer5":"od zapłodnienia do 1 tygodnia, 2-10 tygodnia,od 11 tygodnia do końca ciąży",
-        "correct": 0,
         "info":""
     },
     {
         "id":"ginekologia",
-        "no":12,
-        "task":"Wskaż zdanie prawdziwe:",
-        "answer1":"Do implantacji dochodzi między 6 a 7 dniem od zapłodnienia",
-        "answer2":"Pod wpływem progesteronu endometrium przekształca się w doczesną.",
-        "answer3":"Trofoblast daje początek łożysku",
-        "answer4":"Embrioblast to inaczej węzeł zarodkowy dający początek tkankom płodu.",
-        "answer5":"Wszystkie odpowiedzi są prawidłowe",
+        "no":25,
+        "task":"25. Urodzeniowa masa eutroficznego noworodka wynosi:",
+        "answer1":"2800-3500 g, a CRL - 34 cm",
+        "answer2":"3000-3600 g, a CRL - 36 cm",
+        "answer3":"3200-3800 g, a CRL - 38 cm",
+        "answer4":"3400-3800 g, a CRL - 40 cm",
+        "answer5":"brak prawidłowej odpowiedzi",
+        "correct": 1,
+        "info":""
+    },
+    {
+        "id":"ginekologia",
+        "no":26,
+        "task":"26. Do popłodu nie należy:",
+        "answer1":"łożysko",
+        "answer2":"pępowina",
+        "answer3":"wody płodowe",
+        "answer4":"kosmówka",
+        "answer5":"wszystkie należą",
         "correct": 4,
-        "info":"Do implanta"
-    } 
-]
+        "info":"Do popłodu należą struktury morfologiczne funkcjonujące podczas ciąży i umożliwiające jej prawidłowy rozwój: łożysko, pępowinę, błony płodowe, owodnie, kosmówkę, omocznię, pęcherzyk żółtkowy."
+    },
+    {
+        "id":"ginekologia",
+        "no":27,
+        "task":"W skład pępowiny wchodzą:",
+        "answer1":"1 tętnica pępkowa i 1 żyła pępkowa",
+        "answer2":"1 tętnica pępkowa i 2 żyły pępkowe",
+        "answer3":"2 tętnice pępkowe i 1 żyła pępkowa",
+        "answer4":"1 tętnica pępkowa i 3 żyły pępkowe",
+        "answer5":"2 tętnice pępkowe i 2 żyły pępkowa",
+        "correct": 2,
+        "info":"Tętnice pępkowe pochodzą od tętnicy biodrowej wewnętrznej. Żyła uchodzi do żyły wrotnej wątroby. Naczynia te otoczone są galaterą Whartona, której rola polega na utrzymywaniu drożności naczyń w pępowinie"
+    },
+    {
+        "id":"ginekologia",
+        "no":28,
+        "task":"Z tętnic pępkowych po porodzie powstaje",
+        "answer1":"więzadło obłe wątroby",
+        "answer2":"więzadło pępkowe przyśrodkowe",
+        "answer3":"więzadło żylne",
+        "answer4":"więzadło tętnicze",
+        "answer5":"przewód żylny",
+        "correct": 1,
+        "info":"tętnice pępkowe - więzadła pępkowe przyśrodkowe, żyła pępkowa - więzadło obłe wątroby, przewód żylny - więzadło żylne, przewód tętniczy - więzadło tętnicze"
+    },
+    {
+        "id":"ginekologia",
+        "no":29,
+        "task":"Podział jaja płodowego do 4 dnia ciąży doprowadzi do powstania:",
+        "answer1":"2 kosmówki, 2 owodnie",
+        "answer2":"1 kosmówka, 2 owodnie",
+        "answer3":"1 kosmówka, 1 owodnia",
+        "answer4":"2 kosmówki, 1 owodnia",
+        "answer5":"bliźniaków syjamskich",
+        "correct": 0,
+        "info":"do 4 dnia ciąży - 2 kosmówki, 2 owodnie, 4-7 dzień ciąży - 1 kosmówka, 2 owodnie, po 7 dniu - 1 kosmówka, 1 owodnia, po 14 dniu - bliźnięta niecałkowicie rozdzielone. "
+    } ]
